<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Currencies -->
    <string name="title_currency">Currency</string>
    <string name="currency_date">For date: </string>
    <string name="currencies_add">Add</string>
    <string name="currencies_edit">Edit</string>
    <string name="currencies_list_modify">Set up currencies</string>
    <string name="save_currency_value">Save last conversion</string>
    <string name="update_currencies_on_tab_open">Update on tab opening</string>
    <string name="update_currencies_on_tab_open_summary">On first time opening during session</string>
    <string name="empty_text_no_currencies_added">No currency items added</string>
    <string name="empty_text_no_currencies_found">No matching currencies found</string>
    <string name="empty_text_all_currencies_added">All available items already added</string>
    <string name="currencies_no_internet">Update failed: connection unavailable</string>
    <string name="action_edit">Edit</string>
    <string name="action_edit_date">Select date</string>
    <string name="action_select_all">Select all</string>
    <string name="action_deselect_all">Deselect all</string>
    <string name="tooltip_remove_currency">Long click on item toggles deletion mode</string>
    <string name="action_tooltip_got_it">Got it</string>
    <string name="hint_currency_search">Search for currencies…</string>
    <string name="currencies_update_failed">Load failed: update app or contact dev if it is not fixed in last version</string>
    <string name="currencies_update_exception">Load exception: update app or contact dev if it is not fixed in last version</string>
    <string name="currencies_update_toast">Updating…</string>
    <string name="action_undo">Undo</string>
    <string name="message_item_shown">Item \"%s\" made shown</string>
    <string name="message_item_hidden">Item \"%s\" made hidden</string>
    <string name="message_manually_update">Update currencies?</string>
    <string name="action_update">Update</string>
    <string name="currency_update_title">Update currencies in background</string>
    <string name="currency_update_never">Don\'t update</string>
    <string name="currency_update_wifi">When Wi-Fi available</string>
    <string name="currency_update_any">When mobile network available</string>
    <string name="currency_update_interval_title">Currency update interval</string>
    <string name="currency_update_interval_4">Every 4 hours</string>
    <string name="currency_update_interval_6">Every 6 hours</string>
    <string name="currency_update_interval_8">Every 8 hours</string>
    <string name="currency_update_interval_12">Every 12 hours</string>
    <string name="currency_update_interval_24">Every 24 hours</string>

    <string name="preloaded_currencies_date" translatable="false">1609459200000</string>

</resources>