<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:key="currency"
        android:layout="@layout/category"
        android:title="@string/title_currency">

        <ru.art2000.extensions.preferences.Material3SwitchPreference
            android:defaultValue="false"
            android:key="save_currency_value"
            android:title="@string/save_currency_value"
            app:iconSpaceReserved="false" />

        <ru.art2000.extensions.preferences.Material3SwitchPreference
            android:defaultValue="true"
            android:key="update_currencies_on_tab_open"
            android:title="@string/update_currencies_on_tab_open"
            android:summary="@string/update_currencies_on_tab_open_summary"
            app:iconSpaceReserved="false" />

        <ru.art2000.extensions.preferences.MyDropDownPreference
            android:key="update_currencies_in_background"
            android:title="@string/currency_update_title"
            android:entries="@array/update_network_type"
            android:entryValues="@array/update_network_type_values"
            android:defaultValue="no_update"
            app:iconSpaceReserved="false" />

        <ru.art2000.extensions.preferences.MyDropDownPreference
            android:defaultValue="8"
            android:entries="@array/currency_update_interval"
            android:entryValues="@array/currency_update_interval_values"
            android:key="currency_update_interval"
            android:title="@string/currency_update_interval_title"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>
</PreferenceScreen>